<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:id="@+id/edit_bill_layout">
        <TextView android:layout_height="wrap_content" android:id="@+id/title" android:text="@string/title" android:layout_width="match_parent"></TextView>
    <EditText android:layout_height="wrap_content" android:id="@+id/edit_title" android:layout_width="match_parent" android:text="@string/edit_title"></EditText>
    <TextView android:text="@string/description" android:layout_width="wrap_content" android:id="@+id/description" android:layout_height="wrap_content"></TextView>
    <EditText android:id="@+id/edit_description" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/edit_description"></EditText>	
    </LinearLayout>
