<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:background="#fff"
    android:padding="10dp"
    android:id="@+id/add_participant_layout">
    <TextView android:layout_width="match_parent" android:id="@+id/text_name" android:layout_height="wrap_content" android:text="@string/name"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/edit_name" android:id="@+id/edit_name"></EditText>
    <TextView android:layout_width="wrap_content" android:id="@+id/text_email" android:layout_height="wrap_content" android:text="@string/email"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/edit_email" android:id="@+id/edit_email"></EditText>
</LinearLayout>