<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:background="#fff"
    android:padding="10dp"
    android:id="@+id/add_bill_dialog_id">
    <TextView android:layout_width="match_parent" android:id="@+id/text_title" android:layout_height="wrap_content" android:text="@string/title"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/edit_title" android:id="@+id/edit_title"></EditText>
    <TextView android:layout_width="wrap_content" android:id="@+id/description_text" android:layout_height="wrap_content" android:text="@string/description"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/edit_description" android:id="@+id/edit_description"></EditText>
</LinearLayout>