<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="false"
    android:background="#fff">
        <include layout="@layout/header" android:id="@+id/linearLayout1_ref"  android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <TextView android:layout_width="match_parent" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="@string/title"></TextView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/edit_title" android:id="@+id/title"></EditText>
    <TextView android:layout_width="wrap_content" android:id="@+id/textView2" android:layout_height="wrap_content" android:text="@string/description"></TextView>
    <EditText android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/edit_description" android:id="@+id/description"></EditText>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/button_add_bill" android:id="@+id/add_bill_button"></Button>
</LinearLayout>
